--- a/analyzer.css
+++ b/analyzer.css
@@ -78,10 +78,14 @@ th {
   display: block;
   margin-bottom: 4px;
 }
+
 .file-input-wrapper {
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
   position: relative;
   margin-bottom: 10px;
+  align-items: flex-start;
+  gap: 5px;
 }
 
 #fileInput {
@@ -91,5 +95,23 @@ th {
   height: auto;
   transform: scale(1);
   transform-origin: left center;
-  margin-left: 20px; /* Add some space to account for the scaling */
+  margin-left: 20px;
 }
+
+
+.file-name-display {
+  font-size: 0.9rem;
+  color: #666;
+  margin-left: 20px;
+  max-width: 300px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
+
+
+
+
