--- a/speed-mill.css
+++ b/speed-mill.css
@@ -166,3 +166,13 @@ input[type="number"]:disabled {
     cursor: not-allowed;
 }
 
+
+.formula-image {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.formula-image img {
+    max-height: 150px; /* Adjust this value as needed */
+    border-radius: 4px;
+}
